js/js.translator/testData/incremental/invalidation/nestedClass/lib1/l1.5.kt
data class MyClass(konst unusedField: String) {
    class NestedClass {
        inline fun foo() = field

        konst field = 5
    }

    fun unusedFunction() = -1
}
